--- a/index.html
+++ b/index.html
@@ -1,1 +1,97 @@
-hello world
+<html>
+  <head>
+    <meta charset='utf-8' />
+    <meta name='viewport' content='width=device-width,intial-scale=1.0' />
+    <title>{block:PostTitle}{PostTitle}: {/block:PostTitle}</title>
+
+    <link rel='stylesheet' href='style.css' />
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,800,700,400italic|PT+Serif:400,400italic"/>
+    <link rel='alternate' type='application/rss+xml' href='{RSS}' />
+
+  </head>
+  <body>
+    <div id="container">
+    <header>
+
+      <div class="about">
+      <h1>{Title}{block:PostSummary}, {PostSummary}{/block:PostSummary}        </h1>
+      {block:Description}
+      <meta name="description" content="{MetaDescription}" />
+      {/block:Description}
+     <link rel="shortcut icon" href="{Favicon}" />
+
+      <div id="sidebar">
+      <div class='photo-inner'><a href="/"><img src="{PortraitURL-128}" /></a></div>
+      <img class="image" src="{image:Sidebar}" />
+
+       </div>
+
+       </div>
+
+      <h1>{Title}</h1>
+     </header>
+
+      <div id='content'>
+        {block:Posts}
+         <div id="posts">
+        {block:Text}
+        <div class='post-text'>
+          {block:Title}
+          <h3 class="sub-title">
+            <a href='{Permalink}'>{Title}</a>
+          </h3>
+          {/block:Title}
+          <div class='text'>
+            {Body}
+          </div>
+
+          <div class='metadata'>
+            <ul>
+              <li>
+                <a href='{Permalink}'>Permalink to this post</a>
+              </li>
+              {block:HasTags}
+              <li>Tagged
+                <ul>
+                  {block:Tags}
+                  <li>
+                    <a href='{TagURL}'>{Tag}</a>
+                  </li>
+                  {/block:Tags}
+                </ul>
+              </li>
+              {/block:HasTags}
+            </ul>
+          </div>
+        </div>
+        {/block:Text}
+
+         {block:Photoset}
+        <div class="photoset inner">
+            {Photoset-500}
+            {block:Caption}{Caption}{/block:Caption}
+        {/block:Photoset}
+        {/block:Posts}
+        </div>
+      </div>
+
+    <footer>
+    <div class="top">
+
+                <ul class="socialicons">
+                	<li><a href="https://www.facebook.com/catherine.huang.7509" class="social-facebook"></a></li>
+                    <li><a href="https://twitter.com/YishanH" class="social-twitter"></a></li>
+                    <li><a href="http://instagram.com/yishann1216" class="social-in"></a></li>
+                    <li>Get the
+        <a href='{RSS}'>feed for this blog</a>
+      </li>
+                </ul>
+
+            </div>
+
+    </footer>
+
+    </div>
+  </body>
+</html>
+
