--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name='viewport' content='width=device-width,intial-scale=1.0' />
     <title>{block:PostTitle}{PostTitle}: {/block:PostTitle}</title>
 
-    <link rel='stylesheet' href='style.css' />
+    <link rel='stylesheet' href='css/style.css' />
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,800,700,400italic|PT+Serif:400,400italic"/>
     <link rel='alternate' type='application/rss+xml' href='{RSS}' />
 
