--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <header>
         <div class='about'>
-          <img height='488' src='https://secure.static.tumblr.com/087b559389fcc9d64fc61b050cc64037/ok5opqy/VmAnd8qoq/tumblr_static_tumblr_static__focused_v3.jpg' width='860'>
+          <img src='https://secure.static.tumblr.com/087b559389fcc9d64fc61b050cc64037/ok5opqy/VmAnd8qoq/tumblr_static_tumblr_static__focused_v3.jpg' width='100%'>
           <h1>{Title}</h1>
           {block:Description}
           <h2>{Description}</h2>
